# rhiza

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile.proxy  GEMINI.md  README.md  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json  proxy-server.js  run-tests.sh  seed_data.cypher  test.sh
.github/: copilot-instructions.md
.github/workflows/: test.yml
data/: README.md
data/cypher/: complete_enriched_seed.cypher  data_quality_checks.cypher  database_constraints.cypher  enhanced_schema.cypher
rhiza-api/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
rhiza-api/services/: neo4j_service.py
rhiza-ui/: .dockerignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml
rhiza-ui/.svelte-kit/: ambient.d.ts
rhiza-ui/.svelte-kit/output/client/.vite/: manifest.json
rhiza-ui/.svelte-kit/output/client/_app/: version.json
rhiza-ui/.svelte-kit/output/prerendered/pages/: index.html
rhiza-ui/.svelte-kit/output/server/: index.js  manifest-full.js  manifest.js  remote-entry.js
rhiza-ui/.svelte-kit/output/server/.vite/: manifest.json
rhiza-ui/.svelte-kit/output/server/chunks/: index.js  internal.js
rhiza-ui/.svelte-kit/output/server/nodes/: 0.js  1.js  2.js
rhiza-ui/src/: app.css  app.html
rhiza-ui/src/lib/: constants.js  enriched_graph.js  graphRenderer.js  utils.js
rhiza-ui/src/lib/components/: GraphControls.svelte  GraphVisualization.svelte  SearchResults.svelte
rhiza-ui/src/routes/: +page.svelte
scripts/: backup_database.sh  run-tests.sh  test.sh
(+14 files in other folders)
