[project]
name = "rhiza"
version = "0.1.0"
description = ""
authors = [
    {name = "Steven Miklovic",email = "smiklov1@jh.edu"}
]
license = {text = "AGPL-3.0"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi>=0.133.0",
    "uvicorn>=0.41.0",
    "python-dotenv>=1.1.1",
    "google-genai>=1.64.0",
    "neo4j>=5.28.0,<6.0.0",
    "boto3>=1.42.0",
    "structlog>=25.5.0",
    "slowapi>=0.1.9"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
